<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/ir_indicative"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/ir_right_panel"
        android:layout_toRightOf="@id/ir_indicative"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="2" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/region"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ir_region"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical|right"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="bottom"
                android:text="@string/road_type"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ir_road_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:gravity="bottom|right"
                android:textSize="16dp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ir_right_panel"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/ir_length"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/ir_km_label"
            android:paddingRight="2dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/ir_km_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@id/ir_length"
            android:layout_alignParentRight="true"
            android:text="@string/km"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

</RelativeLayout>